--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,290 @@
 .App {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  background-color: transparent;
+  min-height: 100vh;
+  z-index: 20;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App > * {
+  z-index: 20;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+canvas {
+  z-index: 0;
+  min-height: 100vh;
+  min-width: 100vw;
+}
+
+.app-header {
+  min-width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 1rem;
+}
+
+.app-main {
+  flex-grow: 1;
+  min-width: 100vw;
+  display: flex;
+  flex-direction: column;
+}
+
+.app-footer {
+  min-width: 100vw;
+  min-height: 10vh;
+  font-size: small;
+  color: #a1a1a1 !important;
+  margin-bottom: 5rem;
+  margin-top: 5rem;
+}
+
+.anchor-point {
+  visibility: hidden;
+}
+
+.footer-center {
+  margin-left: auto;
+  margin-right: auto;
+  width: 70vw;
+  flex-grow: 1;
+  display: flex;
+  align-items: flex-start;
+  min-height: 10vh;
+}
+
+.footer-links {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-left: 2rem;
+  margin-right: 2rem;
+  min-height: 8vh;
+}
+
+.footer-center>.app-header-socials {
+  flex-wrap: nowrap;
+}
+
+a:visited {
+  color: #a1a1a1;
+}
+
+.app-header-link {
+  color: gainsboro;
+  text-decoration: none;
+  font-size: large;
+  padding: 1rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  font-weight: bolder;
+}
+
+.app-header-logo {
+  margin-left: 1rem;
+  transition: all ease-out 0.2s;
+  display: inline-block;
+}
+
+.app-header-logo:hover {
+  transform: rotate(0.5turn);
+}
+
+.app-header-navigation {
+  margin-left: auto;
+}
+
+.app-header-socials {
+  margin-right: 1rem;
+  margin-left: auto;
+}
+
+.social-link {
+  color: gainsboro;
+  text-decoration: none;
+  font-size: large;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  font-weight: bolder;
+  user-select: none;
+}
+
+.hover-scale {
+  transition: all ease 0.2s;
+  display: inline-block;
+}
+
+.hover-scale:hover {
+  transform: scale(1.1) translateY(-2px);
+}
+
+.center-content {
+  margin-left: 15vw;
+  width: 50vw;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+
+@media screen and (max-width: 728px) {
+  .center-content {
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
+
+  .footer-center>.app-header-socials {
+    flex-direction: column !important;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.title-bg {
+  background-image: url("./images/me.png");
+  background-blend-mode: multiply;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: 80%;
+  min-height: 80vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.title {
+  padding-top: 5rem;
+  min-width: 20vw;
+  margin-bottom: 0rem;
+}
+
+.title-accent {
+  color: #eaeaea;
+  font-weight: 750;
+  background: transparent !important;
+  -webkit-text-fill-color: currentColor;
+}
+
+.title-sibling {
+  width: 50vw;
+  margin-top: 0;
+  margin-bottom: 2rem;
+  opacity: 80%;
+}
+
+.text-gradient {
+  background: linear-gradient(to right, #eaeaea 0%, #a5a5a5 80%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.contact-title {
+  display: inline-block;
+  text-decoration: none;
+  margin-top: auto;
+  margin-bottom: 0;
+  border: transparent;
+  font-size: large;
+  padding: 15px;
+  padding-left: 30px;
+  padding-right: 30px;
+  border-radius: 30px;
+  background: linear-gradient(90deg, #8b62d5 0%, #5385cf 50%, #1aa9c8 100%);
+  cursor: pointer;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.contact-title:visited {
+  color: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.app-title {
+  margin-bottom: 10rem;
+}
+
+.content-block {
+  width: 80vw;
+  margin-top: 5rem;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.content-block::before {
+  content: " ";
+  min-height: 15px;
+  margin-left: -10px;
+  margin-bottom: 1rem;
+  width: 100px;
+  border: 0px transparent;
+  border-radius: 10px;
+  opacity: 70%;
+  background: linear-gradient(90deg, #8b62d5ee 0%, #5385cfee 50%, #1aa9c8ee 100%);
+}
+
+.content-title {
+  min-width: 20vh;
+  margin-top: 0;
+  align-self: flex-start;
+}
+
+.content-padded {
+  margin-left: 2rem;
+}
+
+.project-flex {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  margin-left: 2rem;
+  width: 35vw;
+}
+
+.project-card {
+  display: flex;
+  justify-content: flex-start;
+  margin-bottom: 5rem;
+}
+
+.project-card::before {
+  content: " ";
+  min-height: 15px;
+  margin-left: -10px;
+  margin-bottom: -10px;
+  margin-top: -10px;
+  width: 5px;
+  border: transparent;
+  border-radius: 10px;
+  background: linear-gradient(0deg, #8b62d5ee 0%, #5385cfee 50%, #1aa9c8ee 100%);
+}
+
+.project-image {
+  max-height: 40vh;
+  max-width: 40vw;
+  align-self: flex-end;
+  margin-left: auto;
+  margin-right: 0;
+}
+
+.project-link {
+  text-decoration: none;
+  text-wrap: nowrap;
+  margin-top: auto;
+  margin-bottom: 0;
+  border: transparent;
+  padding: 15px;
+  padding-left: 30px;
+  padding-right: 30px;
+  border-radius: 30px;
+  background: linear-gradient(90deg, #8b62d5 0%, #5385cf 50%, #1aa9c8 100%);
+  color: white;
+  text-align: center;
+}
+
+.project-link:visited {
+  color: white;
+}
+
+.project-desc {
+  margin-bottom: 2rem;
 }
