--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,36 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Play',sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #282c34;
+  background: radial-gradient(ellipse at center, #3a404d 0%,#282c34 90%);
+  transition: all ease 0.1s;
+  animation: color-fade-in 3s;
+  color: white;
+  font-size: larger;
+}
+
+body, html {
+  scroll-behavior: smooth;
+  background-color: #282c34;
+  background: radial-gradient(ellipse at center, #3a404d 0%,#282c34 90%);
+}
+
+#root {
+  z-index: -1;
+}
+
+@keyframes color-fade-in {
+  0% {
+    color: #ffffff00 !important;
+  }
+  50% {
+    color: #fdfdfdfd !important;
+  }
+  100% {
+    color: white !important;
+  }
 }
 
 code {
