Fixed typos, moved content to other file

--- a/src/App.css
+++ b/src/App.css
@@ -137,6 +137,10 @@ a:visited {
   .footer-center>.app-header-socials {
     flex-direction: column !important;
   }
+
+  .title-bg {
+    background-position: 30vw !important;
+  }
 }
 
 .title-bg {
